--- a/TranslateChuckNorrisJokesBot/package.json
+++ b/TranslateChuckNorrisJokesBot/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure-rest/ai-translation-text": "^1.0.0-beta.1",
+    "@azure/ai-text-analytics": "^5.1.0",
     "axios": "^1.6.2",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
+    "iso-639-1": "^3.1.0",
     "node-telegram-bot-api": "^0.64.0"
   },
   "type": "module"
